--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
         "psr-4": { "": "src/" }
     },
     "require": {
-        "php": ">=7.0.0"
+        "php": ">=7.0.0",
+        "psr/http-message": "^1.0",
+        "zendframework/zend-diactoros": "^1.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5"
