--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,11 @@
     "require": {
         "php": ">=7.0.0",
         "psr/http-message": "^1.0",
-        "zendframework/zend-diactoros": "^1.8"
+        "zendframework/zend-diactoros": "^1.8",
+        "psr/container": "^1.0",
+        "zendframework/zend-config-aggregator": "^1.1",
+        "zendframework/zend-config": "^3.2",
+        "twig/twig": "^2.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5"
